Move to apache httpclient